--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,7 @@
           }
         </style> <a href="">instagram.com/risnugr</a>
       </div>
+
+      <script src="/assets/js/main.js"></script>
 </body>
 </html>
